# xiaoxuan-core-assembly

./: Cargo.toml  README.md
crates/assembler/: Cargo.toml
crates/assembler/src/: assembler.rs  binarygen.rs  entry.rs  imagegenerator.rs  imggen.rs  lib.rs  linker.rs  merged_ast.rs  object_writer.rs  preprocessor.rs  utils.rs
crates/assembler/tests/: README.txt  arithmetic.rs  bitwise.rs  calling.rs  comparison.rs  control_flow.rs  conversion.rs  data.rs  envcall_multithread.rs  envcall_runtime_info.rs  envcall_time.rs  envcall_timer.rs  extcall.rs  funcall.rs  fundamnetal.rs  heap.rs  host.rs  local.rs  math.rs  memory.rs  syscall.rs
crates/assembler/tests/legacy/: bitwise.rs  comparison.rs  control_flow.rs  data.rs  envcall_multithread.rs  envcall_runtime_info.rs  envcall_time.rs  extcall.rs  funcall.rs  fundamnetal.rs  heap.rs  host.rs  local.rs  math.rs  memory.rs  syscall.rs
crates/assembler/tests/lib/: compile.sh
crates/assembler/tests/utils/: mod.rs
crates/assembly/: Cargo.toml
crates/assembly/src/: ast.rs  lib.rs  printer.rs
crates/assembly_parser/: Cargo.toml
crates/assembly_parser/src/: ast.rs  instruction_kind.rs  lexer.rs  parser.rs
crates/linker/: Cargo.toml
crates/parser/: Cargo.toml
crates/parser/src/: ast.rs  charposition.rs  charwithposition.rs  core_assembly_instruction.rs  error.rs  errorprinter.rs  instruction_kind.rs  lexer.rs  lib.rs  location.rs  normalizer.rs  parser.rs  printer.rs  token.rs
crates/parser/src/_legacy/: lexer.rs
docs/: assebmly_control_flow.md  assembly_environment_call.md  assembly_instructions.md  assembly_module.md  assembly_syntax.md  datatypes.md  datatypes_and_literals.md  expressions.md  functions.md  instructions.md  macro.md  macros.md  module.md  overview.md  statements.md
