[package]
name = "anc-assembler"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anc-assembly = { path = "../assembly" }
anc-parser-asm = { path = "../parser" }
anc-isa = { path = "../../../xiaoxuan-core-isa" }
anc-image = { path = "../../../xiaoxuan-core-image" }

[dev-dependencies]
pretty_assertions = "1.4.0"
anc-processor = { path = "../../../xiaoxuan-core-vm/crates/processor" }
anc-context = { path = "../../../xiaoxuan-core-vm/crates/context" }
syscall-util = { git = "https://github.com/hemashushu/syscall-util.git", rev = "c21096fe6f31b63424eec1e5c39a3c1ffe63d67c" }
dyncall-util = { git = "https://github.com/hemashushu/dyncall-util.git", rev = "0a56f688d9b48dec59d19512aaef666c8d69884c" }
# libc = "0.2"