[package]
name = "ancasm-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ancvm-isa = { path = "../../../xiaoxuan-core-vm/crates/isa" }
hexfloat2 = "0.1.3"
ason = "1.3.0"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
pretty_assertions = "1.4.0"
