[package]
name = "anc-parser-asm"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anc-isa = { path = "../../../xiaoxuan-core-isa" }
hexfloat2 = "0.1.3"
ason = "1.3.0"
serde = { version = "1.0.215", features = ["derive"] }

[dev-dependencies]
pretty_assertions = "1.4.1"
