[package]
name = "anc-parser-asm"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anc-assembly = { path = "../assembly" }
anc-isa = { path = "../../../xiaoxuan-core-isa" }
hexfloat2 = "0.1.3"
ason = "1.4.0"
serde = { version = "1.0.216", features = ["derive"] }

[dev-dependencies]
pretty_assertions = "1.4.1"
